--- a/templates/views/weekly.hbs
+++ b/templates/views/weekly.hbs
@@ -16,18 +16,21 @@
             <input placeholder="Location" autofocus>
             <button>Search</button>
         </form>
-        <div class="messages">
+        <div class="weekly-messages">
             <p id="message-1"></p>
             <div class="indented">
                 <p id="message-2"></p>
                 <p id="message-3"></p>
                 <p id="message-4"></p>
+                <p id="message-5"></p>
+                <p id="message-6"></p>
+                <p id="message-7"></p>
             </div>
         </div>
     </div>
 
     {{>footer}}
-    <script src="/js/app.js"></script>
+    <script src="/js/app-weekly.js"></script>
 </body>
 
 </html>
